--- a/MFCApplication1/MFCApplication1.vcxproj
+++ b/MFCApplication1/MFCApplication1.vcxproj
@@ -183,29 +183,45 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AddProduct.h" />
+    <ClInclude Include="AddProductImgs.h" />
+    <ClInclude Include="ContactSeller.h" />
     <ClInclude Include="CSignUp.h" />
     <ClInclude Include="MFCApplication1.h" />
     <ClInclude Include="MFCApplication1Dlg.h" />
+    <ClInclude Include="MyProducts.h" />
+    <ClInclude Include="MyWishlist.h" />
     <ClInclude Include="ProductInfo.h" />
     <ClInclude Include="ProductsList.h" />
     <ClInclude Include="ProductTest.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SignUp2.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="UserProfile.h" />
+    <ClInclude Include="UserSettings.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AddProduct.cpp" />
+    <ClCompile Include="AddProductImgs.cpp" />
+    <ClCompile Include="ContactSeller.cpp" />
     <ClCompile Include="CSignUp.cpp" />
     <ClCompile Include="MFCApplication1.cpp" />
     <ClCompile Include="MFCApplication1Dlg.cpp" />
+    <ClCompile Include="MyProducts.cpp" />
+    <ClCompile Include="MyWishlist.cpp" />
     <ClCompile Include="ProductInfo.cpp" />
     <ClCompile Include="ProductsList.cpp" />
     <ClCompile Include="ProductTest.cpp" />
+    <ClCompile Include="SignUp2.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="UserProfile.cpp" />
+    <ClCompile Include="UserSettings.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MFCApplication1.rc" />
