Added image shapes classes from https://github.com/xTrimy/2D-Image-Generation-In-C-Using-Netpbm-format

--- a/MFCApplication1/MFCApplication1.vcxproj.filters
+++ b/MFCApplication1/MFCApplication1.vcxproj.filters
@@ -66,6 +66,15 @@
     <ClInclude Include="ContactSeller.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SaveToBMP.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Shapes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="RandomAvatar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MFCApplication1.cpp">
@@ -111,6 +120,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ContactSeller.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SaveToBMP.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Shapes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RandomAvatar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
