--- a/MFCApplication1/MFCApplication1.vcxproj
+++ b/MFCApplication1/MFCApplication1.vcxproj
@@ -194,7 +194,10 @@
     <ClInclude Include="ProductInfo.h" />
     <ClInclude Include="ProductsList.h" />
     <ClInclude Include="ProductTest.h" />
+    <ClInclude Include="RandomAvatar.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SaveToBMP.h" />
+    <ClInclude Include="Shapes.h" />
     <ClInclude Include="SignUp2.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -213,6 +216,9 @@
     <ClCompile Include="ProductInfo.cpp" />
     <ClCompile Include="ProductsList.cpp" />
     <ClCompile Include="ProductTest.cpp" />
+    <ClCompile Include="RandomAvatar.cpp" />
+    <ClCompile Include="SaveToBMP.cpp" />
+    <ClCompile Include="Shapes.cpp" />
     <ClCompile Include="SignUp2.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
